fixed spacing

--- a/static/css/mine.css
+++ b/static/css/mine.css
@@ -39,7 +39,7 @@ h1,.h2{
 }
 h2,.h2 {
   font-size: 22px;
-  margin-top:32px;
+  margin-top:22px;
 }
 table, tr, td {
     border: none;
